スタイル修正0518 2nd

--- a/app/css/layout/_sidemenu.scss
+++ b/app/css/layout/_sidemenu.scss
@@ -6,6 +6,7 @@
         position: fixed;
         top: 50%;
         transform: translateY(-50%);
+        z-index: 1;
     }
     %__link {
         display: block;
