スタイル修正0519

--- a/app/css/layout/_sidemenu.scss
+++ b/app/css/layout/_sidemenu.scss
@@ -37,6 +37,7 @@
         display: block;
         margin-bottom: 5px;
         &:hover {
+            transition: color, .5s;
             color: $black;
         }
         &:last-child {
