--- a/app/css/object/component/_cursor.scss
+++ b/app/css/object/component/_cursor.scss
@@ -14,6 +14,6 @@
     opacity: 0;
     &.is-active {
         background: $grey02-hover;
-        border: 1px solid $grey02-hover;
+        border: 1px solid transparent;
     }
 }
