--- a/app/css/object/component/_mask.scss
+++ b/app/css/object/component/_mask.scss
@@ -32,6 +32,7 @@
                 &:nth-child(1),
                 &:nth-child(2),
                 &:nth-child(3) {
+                    transition: color, .5s;
                     color: $hover-text;
                 }
             }
