--- a/app/css/layout/_main.scss
+++ b/app/css/layout/_main.scss
@@ -1,17 +1,30 @@
 .main-fix {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    transition: 1s;
-    // z-index: 2;
+    // position: fixed;
+    // top: 0;
+    // left: 0;
+    // width: 100%;
+    // height: 100%;
+    // transition: 1s;
+    overflow-y: hidden;
+    // position: fixed;
+    // top: 50%;
+    // transform: translateY(-50%);
     @include mq() {
-        // padding: 0 35px;
-        // top: 65%;
-        // width: 100%;
     }
 }
 .main {
-    // overflow: hidden;
 }
+// .top-flex {
+//     display: flex;
+//     flex-wrap: wrap;
+//     justify-content: space-between;
+//     &__item-21 {
+//         width: 21%;
+//     }
+//     &__item-center {
+//         flex: 1;
+//     }
+//     &__item-100 {
+//         width: 100%;
+//     }
+// }
