--- a/app/css/object/component/_scrollbar.scss
+++ b/app/css/object/component/_scrollbar.scss
@@ -2,6 +2,7 @@
     position: fixed;
     right: 18%;
     z-index: 1;
+    top: 635px;
 
     &__text {
         @include baseStyle($fontSize: 12px, $fontWeight: 500);
@@ -18,6 +19,7 @@
     }
     @include mq() {
         right: 10px;
+        top: 510px;
         &__text {
             font-size: 9px;
         }
