--- a/app/css/object/project/_top-visual.scss
+++ b/app/css/object/project/_top-visual.scss
@@ -16,6 +16,8 @@
         // width: 57%;
         width: 100%;
         height: 486px;
+        // height: 530px;
+        object-fit: contain;
         vertical-align: bottom;
         // margin: 0 auto 25px;
         // position: relative;
