--- a/app/css/object/component/_fadein.scss
+++ b/app/css/object/component/_fadein.scss
@@ -22,6 +22,9 @@
         opacity: 1;
         transform: translate(0, 0);
     }
+    @include mq() {
+        transition: .75s .5s;
+    }
 }
 
 .fadein-left {
