スタイル修正0521 2nd

--- a/app/css/object/project/_flex-layout.scss
+++ b/app/css/object/project/_flex-layout.scss
@@ -52,7 +52,8 @@
     &__about {
       flex: auto;
       width: 100%;
-      margin-bottom: 15px;
+      padding: 0;
+      margin-bottom: 50px;
     }
     &__about-l {
       margin-top: 0;
