--- a/app/css/object/project/_main-visual.scss
+++ b/app/css/object/project/_main-visual.scss
@@ -2,7 +2,7 @@
     position: relative;
     &__img {
         // margin-bottom: 40px;
-        height: 230px;
+        // height: 230px;
     }
     &__section {
         margin-bottom: 50px;
@@ -44,7 +44,7 @@
             text-align: center;
         }
         &__img {
-            height: 122px;
+            // height: 122px;
         }
         &__section {
             margin-bottom: 40px;
