--- a/app/css/object/project/_top-visual.scss
+++ b/app/css/object/project/_top-visual.scss
@@ -15,9 +15,10 @@
     &__img {
         // width: 57%;
         width: 100%;
-        height: 486px;
+        // height: 486px;
+        height: 57vw * 2 / 3;
         // height: 530px;
-        object-fit: contain;
+        // object-fit: contain;
         vertical-align: bottom;
         // margin: 0 auto 25px;
         // position: relative;
